solving the problem of gui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
@@ -43,5 +44,5 @@ services:
       context: .
     depends_on:
       - kafka
-    command: ["python", "kafka/producer.py"]
+    command: ["sh", "-c", "sleep 20 && python kafka/producer.py"]
 
