--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,8 +2,8 @@ name: Scrape and Send Gold Price
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every 5 minutes
-  workflow_dispatch:
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
+  workflow_dispatch:       # Allow manual run from GitHub UI
 
 jobs:
   send-price:
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Send gold price to FastAPI
         run: |
-          curl -X POST https://<your-app>.up.railway.app/send-price \
+          curl -X POST https://gold-price-prediction.up.railway.app/send-price \
             -H "Content-Type: application/json" \
             -d '{
                   "timestamp": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'",
