--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,3 +45,15 @@ services:
     depends_on:
       - kafka
     restart: always
+
+  app:
+    build:
+      context: ./app
+    container_name: app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:9092
+    restart: always
