added run_scraper script

--- a/.github/workflows/scrape_and_train.yml
+++ b/.github/workflows/scrape_and_train.yml
@@ -27,6 +27,6 @@ jobs:
 
       - name: Run scraper and train if needed
         run: |
-          python app/utils.py
+          python app/run_scraper.py
 
 
