--- a/.github/workflows/scrape_and_train.yml
+++ b/.github/workflows/scrape_and_train.yml
@@ -30,12 +30,12 @@ jobs:
 
       - name: Commit and push CSV
         env:
-          GOLD_PRICES_API: ${{ secrets.GOLD_PRICES_API }}
+          GH_PAT: ${{ secrets.GOLD_PRICES_API }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/gold_prices.csv
           git commit -m "Update gold price data [auto]" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${GOLD_PRICES_API}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git push
 
