--- a/.github/workflows/scrape_and_train.yml
+++ b/.github/workflows/scrape_and_train.yml
@@ -35,11 +35,11 @@ jobs:
 
       - name: Commit and push CSV
         env:
-          GH_PAT: ${{ secrets.GOLD_PRICES_API }}
+          GH_PAT: ${{secrets.GOLD_PRICES_API}}
         run: |
           git add data/gold_prices.csv
           git commit -m "Update gold price data [auto]" || echo "No changes to commit"
-          git remote set-url origin https://${GH_PAT}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git push origin HEAD
 
 
