--- a/.github/workflows/scrape_and_train.yml
+++ b/.github/workflows/scrape_and_train.yml
@@ -31,7 +31,7 @@ jobs:
   
       - name: Commit and push CSV
         env:
-          GH_PAT: ${{ secrets.GOLD_PRICES_API }}
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
